--- a/PointAndClick.uproject
+++ b/PointAndClick.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{59DF3AF5-4349-0E88-EE52-6088EEAF2622}",
 	"Category": "",
 	"Description": ""
 }
