--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -147,3 +147,6 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+[/Script/Engine.AudioSettings]
+DefaultBaseSoundMix=/Game/Core/MySoundMix.MySoundMix
+
